--- a/main.css
+++ b/main.css
@@ -41,12 +41,18 @@ body {
     height: 6px;
     background: black;
     position: absolute;
+    border-radius: 5px;
     top: 50%;
     transform-origin: 100%;
     transform: rotate(90deg);
     transition: all 0.05s;
-    transition-timing-function:cubic-bezier(0.075, 0.82, 0.165, 1) ;
+    transition-timing-function:cubic-bezier(0.175, 0.885, 0.32, 1.275) ;
 }
+
+#no-transition{
+    transition: 0s;
+}
+
 
 .hour-hand {
     background: crimson;
